--- a/ConstructiveEditor/ConstructiveEditor-Info.plist
+++ b/ConstructiveEditor/ConstructiveEditor-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>Materialise.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>Openminded.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
